fix responsive layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,23 @@
-* {
-    /* border: 1px solid green; */
+@media (min-width: 650px) {
+
+    #flame {
+        visibility: hidden;
+    }
 
 }
 
-
-
-@media (min-width: 401px) {
-    
-   
-}
-
-header {
-
-}
 
 #wrapper {
-    max-width: 1000px;
-    overflow-x: hidden;
+    max-width: 800px;
+    width: fit-content;
 }
 
 #flame {
     position: absolute;
-    right: 5vw;
+    left: 65vw;
     width: 30vw;
+    max-width: 200px;
+    z-index: 1;
 }
 
 #flame:hover {
@@ -31,17 +26,22 @@ header {
 
 #skull {
     position: absolute;
-    top: 33vw;
-    left: 10vw;
+    top: 180px;
+    left: 50px;
     width: 35vw;
+    max-width: 200px;
+    z-index: 2;
+
 }
 
 #logo {
     position: relative;
+    max-width: 600px;
     width: 98vw;
     margin-right: 1vw;
     margin-left: 1vw;
     margin-top: 1vw;
+    z-index: 1;
 
 }
 
@@ -56,16 +56,16 @@ body {
     padding: 0px;
     font-family: 'Courier New', Courier, monospace;
     background-color: yellow;
-
 }
 
 
 #productContainer {
     margin-top: -20vw;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 2vw;
+    margin-right: 5vw;
     align-items: center;
     flex-wrap: wrap;
+
 }
 
 .flexItem {
@@ -75,6 +75,8 @@ body {
     min-width: 300px;
     padding: 10px;
     margin: 10px;
+    z-index: 2;
+
 }
 
 .figure {
